# erc721-example

./: Makefile  README.md  docker-compose.yml  package-lock.json  package.json
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs
chain/: .dockerignore  Dockerfile  README.md  hardhat.config.js  package-lock.json  package.json
chain/contracts/: SimpleNFT.sol
chain/migrations/: 1_deploy_contracts.js
chain/scripts/: deploy.js
chain/test/: SimpleNFT.js
contracts/: SimpleNFT.sol
frontend/: .dockerignore  .gitignore  Dockerfile  package-lock.json
frontend/src/abi/: SimpleNFT.tsx
frontend/src/components/: CreateNewCollection.tsx  Mint.tsx  header.tsx  layout.tsx
frontend/src/pages/: _app.tsx  index.tsx
migrations/: 1_deploy_contracts.js
