[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.4"
ethabi = "18.0.0"
futures = "0.3.26"
hex-literal = "0.3.4"
serde = "1.0.152"
serde_json = "1.0.91"
tokio = { version = "1.25.0", features = [ "sync" ] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
web3 = "0.18.0"
